Fix double border in navigation without children.

--- a/plonetheme/onegov/resources/sass/components/base.scss
+++ b/plonetheme/onegov/resources/sass/components/base.scss
@@ -341,10 +341,12 @@ a,
     }
   }
   & .current {
-    border-bottom: 1px solid $lightgray2;
     padding: 0.5em 0.5em;
     @include gradient($navigation-gradient-from, $navigation-gradient-to);
     font-weight: bold;
+    + li.child {
+      border-top: 1px solid $lightgray2;
+    }
   }
   & .parent, & .sibling {
     border-bottom: 1px solid $lightgray2;
